@@ -13,7 +13,7 @@
               'Handbook of Applied Cryptography', CRC Press, 1996.
 
  Copyright (C) 2004, 2005, 2006, 2007, 
-                           2016, 2017  Heiko Stamer <HeikoStamer@gmx.net>
+                           2016, 2017, 2018  Heiko Stamer <HeikoStamer@gmx.net>
 
    LibTMCG is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -62,6 +62,11 @@
 				const unsigned long int psize, 
 				const unsigned long int mr_iterations);
 			void mpz_lprime
+				(mpz_ptr p, mpz_ptr q, mpz_ptr k, 
+				const unsigned long int psize,
+				const unsigned long int qsize, 
+				const unsigned long int mr_iterations);
+			void mpz_lprime_prefix
 				(mpz_ptr p, mpz_ptr q, mpz_ptr k, 
 				const unsigned long int psize,
 				const unsigned long int qsize, 
